<?xml version="1.0" encoding="utf-8"?>
<!--
ST31 Androidサンプル10 都道府県メモアプリ
res/values/string.xmlファイル
-->
<resources>
    <string name="app_name">三十三所巡礼</string>
    <string name="tv_navi">寺院情報を入力してください</string>
    <string name="tv_honzon">本尊名：</string>
    <string name="tv_shushi">宗旨：</string>
    <string name="tv_address">所在地：</string>
    <string name="tv_url">URL：</string>
    <string name="tv_note">感想：</string>
    <string name="btn_save">保存</string>
</resources>